style(components): :lipstick: fixed too small items in nav

--- a/styles/modules/SubNavItem.module.scss
+++ b/styles/modules/SubNavItem.module.scss
@@ -7,7 +7,7 @@
 .notSelected {
   h4 {
     color: assets.$main_nav;
-    font-size: 0.7rem;
+    font-size: small;
     font-weight: unset;
     h4:hover {
       color: assets.$main_nav;
